[gd_scene load_steps=5 format=3 uid="uid://doydgpukwkwab"]

[ext_resource type="Script" path="res://Scripts/Objects/hml_projectile.gd" id="1_gy3xo"]
[ext_resource type="PackedScene" uid="uid://bfklbt2weehvw" path="res://Assets/Entities/face_target.tscn" id="2_0arpt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ewh55"]
radius = 0.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gdtoh"]

[node name="HML_Projectile" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_gy3xo")

[node name="FaceTargetY" parent="." instance=ExtResource("2_0arpt")]

[node name="FaceTargetX" parent="FaceTargetY" instance=ExtResource("2_0arpt")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="DirRef" type="Node3D" parent="FaceTargetY/FaceTargetX"]

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="FaceTargetY/FaceTargetX/DirRef"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
remote_path = NodePath("../../../../ProjectileMesh")

[node name="ProjectileCollision" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ewh55")

[node name="ProjectileMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 4.37114e-08, -4.37114e-08, -4.37114e-08, 4.37114e-08, 1, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_gdtoh")

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="StartDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
[connection signal="timeout" from="StartDelay" to="." method="_on_start_delay_timeout"]
